--- a/web-app/src/App.css
+++ b/web-app/src/App.css
@@ -1,3 +1,8 @@
+@import "tailwindcss";
+@plugin "daisyui"{
+  themes: light --default, dark --prefersdark, dracula;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
